[package]
name = "srb-lens-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for srb-lens — query Sorbet type information from Ruby projects"
license = "MIT"
repository = "https://github.com/kazzix14/srb-lens"
authors = ["kazzix14"]
keywords = ["sorbet", "ruby", "static-analysis", "cli"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
srb-lens = { version = "0.1.0", path = "../srb-lens" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
