[package]
name = "srb_lens"
version = "0.4.0"
edition = "2024"
description = "Ruby native extension for srb-lens"
license = "MIT"
repository = "https://github.com/kazzix14/srb-lens"
authors = ["kazzix14"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8", features = ["rb-sys"] }
srb-lens = "0.4.0"
